# demo

./: Jenkinsfile  commit2.txt  file1.txt  file2.txt  region_test.sh
.github/workflows/: dotnet.yml
dotnet-demo/: dotnet-demo.csproj
dotnet-demo/.github/workflows/: dotnet.yml
led-firmware/: CMakeLists.txt  Jenkinsfile
vehicle-parking/: Jenkinsfile
